Atualização. Paramos no video 29

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,11 @@
-<br />
-<center>
-  <h2><strong>404 ERROR</strong></h2>
-  <p>Página não encontrada. Tente Novamente</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+
+  <br />
+  <center>
+    <h2><strong>404 ERROR</strong></h2>
+    <p>Página não encontrada. Tente Novamente</p>
+  </center>
+
+{% endblock %}
