--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,12 @@
-<br />
-<center>
-  <h2><strong>500 INTERNAL SERVER ERROR</strong></h2>
-  <p>Tente Novamente</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+
+
+  <br />
+  <center>
+    <h2><strong>500 INTERNAL SERVER ERROR</strong></h2>
+    <p>Tente Novamente</p>
+  </center>
+
+{% endblock %}
