--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,5 @@
-<h1>Olá {{ user_name|capitalize }}</h1>
+{% extends 'base.html' %} {% block content %}
+
+<h1>Olá {{ user_name|capitalize }}!</h1>
+
+{% endblock %}
