--- a/templates/post.html
+++ b/templates/post.html
@@ -14,13 +14,16 @@ get_flashed_messages() %}
   <h2>{{ post.title }}</h2>
   <small style="display: flex; justify-content: space-between">
     <span>by @{{ post.poster.username }}</span>
-    <span>{{ post.date_posted }}</span>
+    <span>{{ post.date_posted }}</span> 
   </small>
   <br />
-  {{ post.content }} <br /> <br/>
-  <a href="{{ url_for('edit_post', id=post.id) }}" class="btn btn-secondary btn-sm">Editar</a>
-  <a href="{{ url_for('delete_post', id=post.id) }}" class="btn btn-danger btn-sm" 
-    onclick="return confirm('Tem certeza que deseja deletar este post?');">Deletar</a>
+  {{ post.content|safe }} <br /> <br/>
+
+  {% if post.poster_id == current_user.id %}
+    <a href="{{ url_for('edit_post', id=post.id) }}" class="btn btn-secondary btn-sm">Editar</a>
+    <a href="{{ url_for('delete_post', id=post.id) }}" class="btn btn-danger btn-sm" 
+      onclick="return confirm('Tem certeza que deseja deletar este post?');">Deletar</a>
+  {% endif %}
   <a href="{{ url_for('posts') }}" class="btn btn-secondary btn-sm">Voltar</a>
   <br />
 
