--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,9 +35,12 @@ get_flashed_messages() %}
       class="btn btn-danger btn-sm"
       onclick="return confirm('Tem certeza que deseja deletar este Usuário?');"
       >Apagar Conta</a>
+      <div class="col-4">
+        <img src="{{ url_for('static', filename='images/gossipgirl1.jpg') }}" class="img-fluid" style="width: 200px; position: absolute; top: 100px; right: 150px;" alt="Imagem Gossip Girl">
       <br/><br/><br/><br/>
     
   </div>
+</div>
 </div>
 
 <br />
@@ -61,11 +64,6 @@ get_flashed_messages() %}
   </div>
   
 </div>
-<div class="col-4">
-  <img src="{{ url_for('static', filename='images/gossipgirl1.jpg') }}" class="img-fluid" style="width: 200px; position: absolute; top: 150px; right: 150px;" alt="Imagem Gossip Girl">
-
-
-
 
   {% endblock %}
 </div>
