--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,8 +36,13 @@ get_flashed_messages() %}
       onclick="return confirm('Tem certeza que deseja deletar este Usuário?');"
       >Apagar Conta</a>
       <div class="col-4">
+        
+        {% if current_user.profile_pic %}
+        <img src="{{ url_for('static', filename='images/' + current_user.profile_pic ) }}" class="img-fluid" style="width: 200px; position: absolute; top: 60px; right: 150px;" alt="Imagem Gossip Girl">
+        {% else %}
         <img src="{{ url_for('static', filename='images/gossipgirl1.jpg') }}" class="img-fluid" style="width: 200px; position: absolute; top: 100px; right: 150px;" alt="Imagem Gossip Girl">
-      <br/><br/><br/><br/>
+
+         {% endif %} 
     
   </div>
 </div>
