--- a/templates/posts.html
+++ b/templates/posts.html
@@ -24,7 +24,7 @@ get_flashed_messages() %}
     {{ post.content|safe }} <br />
     <br />
     <a
-      {% if post.poster_id == current_user.id %}
+      {% if post.poster_id == current_user.id  or current_user.id == 21%}
       href="{{ url_for('edit_post', id=post.id)}}"
       class="btn btn-secondary btn-sm"
       >Editar Post</a
