Commit antes de alterar por conta própria (sem o John Elder)

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -13,7 +13,7 @@ get_flashed_messages() %}
 <h1>Olá {{ name|capitalize }}!!</h1>
 
 {%else%}
-<h1>Lista de usuários</h1>
+<h1>Cadastro</h1>
 <br />
 <div class="shadow p-3 mb-5 bg-body-primary rounded">
   <form method="POST">
